[package]
name = "hello-world-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fil_actors_runtime = { git = "https://github.com/milos-ethernal/builtin-actors", features = ["fil-actor"] }
fvm_shared = { version = "3.2.0", default-features = false }
fvm_ipld_encoding = "0.3.3"
frc42_dispatch = "3.0.2"
serde = { version = "1.0.136", features = ["derive"] }
num-traits = "0.2.14"
num-derive = "0.3.3"

[build-dependencies]
substrate-wasm-builder = "4.0.0"